--- a/templates/bmc/html/com_groups/groups.less
+++ b/templates/bmc/html/com_groups/groups.less
@@ -79,6 +79,11 @@
 	background: @colorSidebarLine;
 }
 
+#page_menu li ul li.active > a {
+	background: #fff;
+	color: @colorSidebarTextActive;
+}
+
 #page_menu li.active > a {
 	background: #fff;
 	color: @colorSidebarTextActive;
