--- a/app/templates/bmc/html/com_groups/groups.less
+++ b/app/templates/bmc/html/com_groups/groups.less
@@ -121,6 +121,11 @@
 	background: white;
 	border-radius: 20%;
 	overflow: hidden;
+
+	a {
+		min-width: 0;
+		max-width: none;
+	}
 }
 
 /* BEGIN: Fixing files plugin */
